# VoxStrata

./: README.md  app.py  pyproject.toml
data/raw/: data.csv
notebooks/: 01_jt_finetuning.ipynb  02_jt.ipynb  03&04_jt.ipynb
