[project]
name = "joshtalks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.3",
    "evaluate>=0.4.6",
    "jiwer>=4.0.0",
    "kaggle>=1.7.4.5",
    "librosa>=0.11.0",
    "openai-whisper>=20250625",
    "torchaudio>=2.10.0",
    "transformers>=5.3.0",
    "whisper>=1.1.10",
]
